# code_diff

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_slc_process.py  setup.py
code_diff/: __init__.py  ast.py  diff_utils.py  sstubs.py  utils.py
code_diff/gumtree/: __init__.py  chawathe.py  editmap.py  isomap.py  ops.py  utils.py
tests/: test_sstubs.py
